fix : refined page vertical spacing & responsiveness

--- a/convertly-frontend/src/styles.scss
+++ b/convertly-frontend/src/styles.scss
@@ -20,6 +20,6 @@
   @apply p-4 px-16 pt-6 border-b-4 border-primary border-opacity-0 hover:border-opacity-100 hover:text-primary duration-200 cursor-pointer;
  }
  .hero-button {
-  @apply px-9 py-3 mt-16 text-3xl font-bold shadow-black hover:shadow-pop600 tracking-widest bg-gradient-to-r from-pop600 via-pop600 to-primary600/80 rounded-3xl text-black shadow-md brightness-110 hover:brightness-[1.35] hover:from-primary600 hover:to-pop600/80 transition-all duration-1000 ease-in-out
+  @apply px-9 py-3 mt-8 xl:mt-16 text-3xl font-bold shadow-black hover:shadow-pop600 tracking-widest bg-gradient-to-r from-pop600 via-pop600 to-primary600/80 rounded-3xl text-black shadow-md brightness-110 hover:brightness-[1.35] hover:from-primary600 hover:to-pop600/80 transition-all duration-1000 ease-in-out
  }
 }
